--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Inter Light';
-  src: url('./assets/fonts/inter/Inter_18pt-Light.ttf');
+  src: url('./assets/fonts/inter/Inter_28pt-Light.ttf');
 }
 
 @font-face {
@@ -10,22 +10,27 @@
 
 @font-face {
   font-family: 'Inter Medium';
-  src: url('./assets/fonts/inter/Inter_18pt-Medium.ttf');
+  src: url('./assets/fonts/inter/Inter_28pt-Medium.ttf');
 }
 
 @font-face {
   font-family: 'Inter Bold';
-  src: url('./assets/fonts/inter/Inter_18pt-Bold.ttf');
+  src: url('./assets/fonts/inter/Inter_28pt-Bold.ttf');
 }
 
 @font-face {
   font-family: 'Inter Extra Bold';
-  src: url('./assets/fonts/inter/Inter_18pt-ExtraBold.ttf');
+  src: url('./assets/fonts/inter/Inter_28pt-ExtraBold.ttf');
 }
 
 @font-face {
   font-family: 'Inter Extra Bold Italic';
-  src: url('./assets/fonts/inter/Inter_18pt-ExtraBoldItalic.ttf');
+  src: url('./assets/fonts/inter/Inter_28pt-ExtraBoldItalic.ttf');
+}
+
+@font-face {
+  font-family: 'Inter Bold Italic';
+  src: url('./assets/fonts/inter/Inter_28pt-BoldItalic.ttf');
 }
 
 @font-face {
@@ -41,8 +46,13 @@ body {
   box-sizing: border-box;
 }
 
+.padding-20 {
+  padding: 20px;
+}
+
 h1 {
-  font-family: 'Inter Extra Bold';
+  font-family: 'Inter Bold';
+  font-size: 40px;
 }
 
 h2::first-letter {
@@ -59,6 +69,7 @@ a {
   font-family: 'Inter Extra Bold';
   color: rgb(208, 208, 208);
   font-size: 24px;
+  z-index: 1;
 }
 
 a:link {
@@ -68,4 +79,13 @@ a:link {
 a:visited {
   text-decoration: none;
   color: #b2dcfc;
+}
+
+.post-card {
+  padding: 20px;
+  border-radius: 20px;
+}
+
+.post-card:hover {
+  box-shadow: inset 0 0 0 2px rgb(255, 255, 255, 0.2);
 }
