--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -27,11 +27,39 @@ header .bottom {
   font-size: 16px;
 }
 
-.bolt {
-  margin-right: 8px;
-  margin-top: 2px;
-  width: 63px;
-  height: 63px;
+.bolt-wrapper {
+  position: relative;
+  width: 100px; /* enough to fit triangles */
+  height: 100px;
+  border: 4px solid rgb(71, 71, 252);
+  border-radius: 50%;
+  max-width: 60px;
+  max-height: 60px;
+  margin-right: 20px;
+}
+
+.top-triangle,
+.bottom-triangle {
+  position: absolute;
+  transform-origin: center;
+}
+
+.top-triangle {
+  top: 10%;
+  left: 20%;
+  width: 0;
+  height: 0;
+  border-left: 20px solid transparent;
+  border-bottom: 30px solid #f5ca2a;
+}
+
+.bottom-triangle {
+  top: 40%;
+  right: 25%;
+  width: 0;
+  height: 0;
+  border-right: 20px solid transparent;
+  border-top: 30px solid #f5ca2a;
 }
 
 a {
