--- a/src/template/src/styles/styles.css
+++ b/src/template/src/styles/styles.css
@@ -63,18 +63,51 @@ p {
 
 figure {
   margin: 40px 0 20px 0px;
-}
-
-pre {
-  border-radius: 20px;
-}
-
-code {
   font-size: 18px;
-  padding: 10px;
+  padding: 0px 15px 0px 20px;
   background-color: #191d27;
   border-radius: 10px;
   border: 1px solid #424550;
+}
+
+pre {
+  overflow-x: auto;
+  background-color: #191d27;
+}
+
+code {
+  background-color: #191d27;
+  font-size: 18px;
+}
+
+figure pre code span {
+  margin-top: 0.7rem;
+}
+
+code[data-line-numbers] {
+  counter-reset: line;
+}
+
+code[data-line-numbers] > [data-line]::before {
+  counter-increment: line;
+  content: counter(line);
+  display: inline-block;
+  width: 0.75rem;
+  margin-right: 1.2rem;
+  text-align: right;
+  color: rgb(92, 92, 92, 0.8);
+}
+
+code[data-line-numbers-max-digits='2'] > [data-line]::before {
+  width: 1.25rem;
+}
+
+code[data-line-numbers-max-digits='3'] > [data-line]::before {
+  width: 1.75rem;
+}
+
+code[data-line-numbers-max-digits='4'] > [data-line]::before {
+  width: 2.25rem;
 }
 
 .date {
