--- a/src/template/src/styles/styles.css
+++ b/src/template/src/styles/styles.css
@@ -1,7 +1,7 @@
-@import 'fonts.css';
-@import 'flicker.css';
-@import 'logo.css';
-@import 'post-card.css';
+@import "fonts.css";
+@import "flicker.css";
+@import "logo.css";
+@import "post-card.css";
 
 header {
   margin-top: 20px;
@@ -18,12 +18,12 @@ header .top {
 header .top .title {
   color: white;
   text-transform: uppercase;
-  font-family: 'Inter Bold';
-  font-size: 35px;
+  font-family: "Bangers Regular";
+  font-size: 48px;
 }
 
 header .bottom {
-  font-family: 'Inter Regular';
+  font-family: "Inter Regular";
   font-size: 16px;
 }
 
@@ -55,10 +55,12 @@ body {
 }
 
 p {
-  font-family: 'PT Regular';
-  color: #d6d6d6;
+  font-family: "Merriweather Sans Light";
+  color: #e8e8e8;
   font-size: 18px;
   text-align: justify;
+  line-height: 2;
+  letter-spacing: 1px;
 }
 
 figure {
@@ -98,20 +100,20 @@ code[data-line-numbers] > [data-line]::before {
   color: rgb(92, 92, 92, 0.8);
 }
 
-code[data-line-numbers-max-digits='2'] > [data-line]::before {
+code[data-line-numbers-max-digits="2"] > [data-line]::before {
   width: 1.25rem;
 }
 
-code[data-line-numbers-max-digits='3'] > [data-line]::before {
+code[data-line-numbers-max-digits="3"] > [data-line]::before {
   width: 1.75rem;
 }
 
-code[data-line-numbers-max-digits='4'] > [data-line]::before {
+code[data-line-numbers-max-digits="4"] > [data-line]::before {
   width: 2.25rem;
 }
 
 .date {
-  font-family: 'Inter Regular';
+  font-family: "Inter Regular";
   color: #d6d6d6;
   margin-top: 5px;
   font-size: 17px;
@@ -123,7 +125,7 @@ code[data-line-numbers-max-digits='4'] > [data-line]::before {
 }
 
 .post .title {
-  font-family: 'Inter Extra Bold';
+  font-family: "Inter Extra Bold";
   color: rgb(241, 241, 241);
-  font-size: 34px;
+  font-size: 36px;
 }
