--- a/src/template/src/styles/logo.css
+++ b/src/template/src/styles/logo.css
@@ -2,7 +2,7 @@
   position: relative;
   width: 100px; /* enough to fit triangles */
   height: 100px;
-  border: 4px solid rgb(71, 71, 252);
+  border: 4px solid #4877dd;
   border-radius: 50%;
   max-width: 60px;
   max-height: 60px;
