--- a/src/template/src/styles/styles.css
+++ b/src/template/src/styles/styles.css
@@ -1,7 +1,7 @@
-@import "fonts.css";
-@import "flicker.css";
-@import "logo.css";
-@import "post-card.css";
+@import 'fonts.css';
+@import 'flicker.css';
+@import 'logo.css';
+@import 'post-card.css';
 
 header {
   margin-top: 20px;
@@ -18,12 +18,12 @@ header .top {
 header .top .title {
   color: white;
   text-transform: uppercase;
-  font-family: "Bangers Regular";
+  font-family: 'Bangers Regular';
   font-size: 48px;
 }
 
 header .bottom {
-  font-family: "Inter Regular";
+  font-family: 'Inter Regular';
   font-size: 16px;
 }
 
@@ -55,7 +55,7 @@ body {
 }
 
 p {
-  font-family: "Merriweather Sans Light";
+  font-family: 'Merriweather Sans Light';
   color: #e8e8e8;
   font-size: 18px;
   text-align: justify;
@@ -66,10 +66,9 @@ p {
 figure {
   margin: 40px 0 20px 0px;
   font-size: 18px;
-  padding: 0px 15px 0px 20px;
   background-color: #191d27;
-  border-radius: 10px;
-  border: 1px solid #424550;
+  border-radius: 0.5rem;
+  border: 1px solid rgb(51, 84, 154);
 }
 
 pre {
@@ -95,25 +94,25 @@ code[data-line-numbers] > [data-line]::before {
   content: counter(line);
   display: inline-block;
   width: 0.75rem;
-  margin-right: 1.2rem;
+  margin: 0.2rem 1.2rem 0.2rem 1.2rem;
   text-align: right;
   color: rgb(92, 92, 92, 0.8);
 }
 
-code[data-line-numbers-max-digits="2"] > [data-line]::before {
+code[data-line-numbers-max-digits='2'] > [data-line]::before {
   width: 1.25rem;
 }
 
-code[data-line-numbers-max-digits="3"] > [data-line]::before {
+code[data-line-numbers-max-digits='3'] > [data-line]::before {
   width: 1.75rem;
 }
 
-code[data-line-numbers-max-digits="4"] > [data-line]::before {
+code[data-line-numbers-max-digits='4'] > [data-line]::before {
   width: 2.25rem;
 }
 
 .date {
-  font-family: "Inter Regular";
+  font-family: 'Inter Regular';
   color: #d6d6d6;
   margin-top: 5px;
   font-size: 17px;
@@ -125,7 +124,11 @@ code[data-line-numbers-max-digits="4"] > [data-line]::before {
 }
 
 .post .title {
-  font-family: "Inter Extra Bold";
+  font-family: 'Inter Extra Bold';
   color: rgb(241, 241, 241);
   font-size: 36px;
+}
+
+[data-highlighted-line] {
+  background: rgba(200, 200, 255, 0.1);
 }
