--- a/src/template/src/styles/styles.css
+++ b/src/template/src/styles/styles.css
@@ -132,3 +132,15 @@ code[data-line-numbers-max-digits='4'] > [data-line]::before {
 [data-highlighted-line] {
   background: rgba(200, 200, 255, 0.1);
 }
+
+.tag {
+  display: inline-block;
+  margin: 1rem 0.5rem 0rem 0rem;
+  padding: 0.5rem 1rem;
+  font-size: 1.2rem;
+  font-weight: 500;
+  border-radius: 0.5rem; /* pill shape */
+  background-color: var(--tag-color, #e0e0e0);
+  color: #111;
+  line-height: 1;
+}
