feat: the title of the blog is set automatically from the value in package.json

--- a/src/template/index.html
+++ b/src/template/index.html
@@ -15,7 +15,7 @@
       </div>
       <div>
         <div class="top">
-          <a class="title" href="/">blazed-past-us</a>
+          <a id="title" class="title" href="/"></a>
         </div>
         <div class="bottom neon" id="speed"></div>
       </div>
