refactor: css cleanup

--- a/src/template/index.html
+++ b/src/template/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="./src/styles/styles.css" rel="stylesheet" />
+    <link href="./src/styles/main.css" rel="stylesheet" />
   </head>
   <body>
     <header>
@@ -17,7 +17,7 @@
         <div class="top">
           <a id="title" class="title" href="/"></a>
         </div>
-        <div class="bottom neon" id="speed"></div>
+        <div class="speed" id="speed"></div>
       </div>
     </header>
     <div id="root"></div>
