feat: adds animated stars to the header bg

--- a/src/template/index.html
+++ b/src/template/index.html
@@ -22,5 +22,6 @@
     </header>
     <div id="root"></div>
     <script type="module" src="./src/main.js"></script>
+    <script type="module" src="./src/three.js"></script>
   </body>
 </html>
