--- a/src/template/src/styles/main.css
+++ b/src/template/src/styles/main.css
@@ -5,7 +5,7 @@
 @import 'home.css';
 
 :root {
-  --bg-color: rgb(40, 44, 53);
+  --bg-color: rgb(27, 29, 35);
   --max-width: 55rem;
   --neon: #82f9ff;
   --light-blue-09: rgba(129, 213, 255, 0.9);
@@ -22,10 +22,27 @@ a:visited {
   text-decoration: none;
 }
 
+html {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
 body {
   background-color: var(--bg-color);
   max-width: var(--max-width);
   margin: 0 auto;
+  overflow: hidden;
+  padding: 0;
+}
+
+canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
 
 .capitalize-first::first-letter {
