--- a/src/template/src/styles/animations.css
+++ b/src/template/src/styles/animations.css
@@ -123,3 +123,12 @@
     opacity: 1;
   }
 }
+
+@keyframes rotate360 {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
