refactor: main.js cleanup

--- a/src/template/index.html
+++ b/src/template/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <div class="logo">
-        <div class="wrapper">
+        <div class="wrapper" id="logo-wrapper">
           <div class="top"></div>
           <div class="bottom"></div>
         </div>
@@ -22,6 +22,6 @@
     </header>
     <div id="root"></div>
     <script type="module" src="./src/main.js"></script>
-    <script type="module" src="./src/three.js"></script>
+    <script type="module" src="./src/stars.js"></script>
   </body>
 </html>
