--- a/src/template/src/styles/post.css
+++ b/src/template/src/styles/post.css
@@ -46,9 +46,10 @@ pre {
 
 figure {
   margin: 1.5rem 0 2rem 0;
+  padding: 0.5rem 0 0.5rem 0;
   font-size: var(--body-font-size);
   border-radius: var(--border-radius);
-  border: 0.1rem solid var(--light-blue-05);
+  box-shadow: var(--primary-box-shadow);
 }
 
 code {
