--- a/src/template/src/styles/main.css
+++ b/src/template/src/styles/main.css
@@ -14,6 +14,7 @@
   --body-font-family: 'Merriweather Sans Light';
   --body-font-size: 1.1rem;
   --border-radius: 0.5rem;
+  --primary-box-shadow: inset 0 0 0 0.1rem var(--light-blue-05);
 }
 
 a,
